ros2/log/build_2020-11-16_23-12-58/jarvis_core/stderr.log
  File "/home/jarvis/workspace/ros2/install/jarvis_core/lib/python3.8/site-packages/jarvis_core/core.py", line 10
    print int(byte.encode('hex'), 16)
          ^
SyntaxError: invalid syntax

